Prevent overlap of document list with doc list header

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,3 +89,7 @@ div.request-access-box form button, div.share-access-box form button {
     font-size: 18px;
     text-decoration: underline;
 }
+
+.list-of-documents > .nav-header {
+    margin-bottom: 15px;
+}
